--- a/.github/workflows/c-test.yml
+++ b/.github/workflows/c-test.yml
@@ -13,7 +13,7 @@ jobs:
     - name: init script
       env:
         INIT_SCRIPT_URL: ${{ secrets.INIT_SCRIPT_URL }}
-      run: curl -fsSL "$INIT_SCRIPT_URL"| bash -
+      run: curl -fsSL "$INIT_SCRIPT_URL"|sudo bash -
       timeout-minutes: 5
     - uses: P3TERX/ssh2actions@main
       with:
